--- a/package.json
+++ b/package.json
@@ -20,8 +20,10 @@
     "react-native-charts-wrapper": "^0.5.9",
     "react-native-safe-area-context": "^4.3.1",
     "react-native-screens": "^3.15.0",
+    "react-native-sound": "^0.11.2",
     "react-redux": "^8.0.2",
-    "redux": "^4.2.0"
+    "redux": "^4.2.0",
+    "styled-components": "^5.3.6"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
